--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "sass": "^1.84.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
