--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@public/*": ["public/*"],
     }
   },
   "include": [
