--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "megafun",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@sanity/client": "^6.27.2",
-    "@sanity/icons": "^3.5.7",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.74.1",
-    "lottie-react": "^2.4.1",
-    "next": "15.1.6",
-    "next-sanity": "^9.8.54",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sanity": "^3.74.1",
-    "styled-components": "^6.1.15"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.84.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "megafun",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@portabletext/react": "^3.2.1",
+		"@sanity/client": "^6.27.2",
+		"@sanity/icons": "^3.5.7",
+		"@sanity/image-url": "^1.1.0",
+		"@sanity/vision": "^3.74.1",
+		"lottie-react": "^2.4.1",
+		"next": "15.1.6",
+		"next-sanity": "^9.8.54",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"sanity": "^3.74.1",
+		"styled-components": "^6.1.15"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.6",
+		"postcss": "^8",
+		"prettier": "^3.4.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"sass": "^1.84.0",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
