--- a/package.json
+++ b/package.json
@@ -13,13 +13,26 @@
     "@sanity/icons": "^3.5.7",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.74.1",
+    "@tabler/icons-react": "^3.30.0",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
+    "motion": "^12.4.7",
     "next": "15.1.6",
     "next-sanity": "^9.8.54",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
     "sanity": "^3.74.1",
-    "styled-components": "^6.1.15"
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
