--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+    "@portabletext/react": "^3.2.1",
 		"@sanity/client": "^6.27.2",
 		"@sanity/icons": "^3.5.7",
 		"@sanity/image-url": "^1.1.0",
@@ -17,10 +18,8 @@
 		"aos": "^2.3.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^12.4.7",
 		"lottie-react": "^2.4.1",
 		"lucide-react": "^0.475.0",
-		"motion": "^12.4.7",
 		"next": "15.1.6",
 		"next-sanity": "^9.8.54",
 		"react": "^19.0.0",
