--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-    "@portabletext/react": "^3.2.1",
+		"@portabletext/react": "^3.2.1",
 		"@sanity/client": "^6.27.2",
 		"@sanity/icons": "^3.5.7",
 		"@sanity/image-url": "^1.1.0",
@@ -25,6 +25,7 @@
 		"react": "^19.0.0",
 		"react-countup": "^6.5.3",
 		"react-dom": "^19.0.0",
+		"react-photo-view": "^1.2.7",
 		"react-slick": "^0.30.3",
 		"sanity": "^3.74.1",
 		"slick": "^1.12.2",
