--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/aos": "^3.0.7",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
