--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
 		"slick-carousel": "^1.8.1",
 		"styled-components": "^6.1.15",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7",
-		"vercel": "^41.3.2"
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
